# tauri_template

./: .gitignore  TODO.md  package-lock.json  package.json  tailwind.config.js
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/openapi/: stratafi_schema.json
src-tauri/src/: cli.rs  main.rs
src/routes/: +page.svelte
