[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.73.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.0", features = [] }

[dependencies]
serde_json = "1.0.107"
serde = { version = "1.0.190", features = ["derive"] }
tauri = { version = "1.5.2", features = ["cli", "api-all"] }
tokio = "1.33.0"
anyhow = "1.0.75"
thiserror = "1.0.50"
tracing = "0.1.40"
gelf = "0.5.0"
tracing-subscriber = "0.3.17"
reqwest = "0.11.22"
dotenv = "0.15.0"
envy = "0.4.2"
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
